# genie-flow-invoker-weaviate

./: .gitignore  README.md  example_create_collection.py  pyproject.toml  setup.py
genie_flow_invoker/invoker/: weaviate.py
genie_flow_invoker/invoker/weaviate/: __init__.py  client.py  model.py  search.py
src/genie_flow_invoker/invoker/weaviate/: __init__.py  base.py  client.py  delete.py  exceptions.py  model.py  persist.py  search.py  utils.py
tests/: conftest.py  test_delete.py  test_delete_invoke.py  test_filter.py  test_persist.py  test_persist_invoke.py  test_search.py  test_search_invoke.py
